src/App.css
.App {
  height: 100vh;
  width: 100vw;
  margin: 0%;
  display: flex;
  position: relative;
  flex-direction: column;
  align-items: flex-start;
  overflow-x: hidden;
  overflow-y: hidden;
}
.App .upperBar {
  width: 100%;
  height: 60px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  margin-top: 1%;
  margin-left: 1%;
  margin-right: 1%;
}

.App .upperBar .title {
  margin-right: 7%;
}

.App .upperBar .cd {
  height: 55%;
  width: 30%;
  display: flex;
  margin-left: 100px;
  justify-content: flex-start;
  align-items: center;
  background-color: rgb(198, 198, 198);
  border-radius: 100px;
}

.App .upperBar .cd .urlFeild {
  height: 90%;
  width: 100%;
  border-radius: 100px;
  margin-left: 1%;
  padding-left: 10px;
  outline: none;
  overflow: scroll;
  border :0ch;
  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  background-color: rgb(198, 198, 198);
}

.App .bottomBar .subscriptionBar {
  height: 100%;
  width: 46%;
  margin: 1%;
  display: flex;
  flex-direction: column;
}

.App .bottomBar .resultBar {
  height: 100%;
  width: 48%;
  margin: 1%;
  display: flex;
  flex-direction: column;
}

.App .bottomBar .resultBar .resTitleBar {
  background-color: black;
  height: 8%;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding-left: 1%;
  color: white;
  font-weight: bold;
}

.App .bottomBar .resultBar .resTitleBar .subsInp {
  height: 100%;
  width: 45%;
  display: flex;
  align-items: center;
}

.App .bottomBar .resultBar .subsList {
  height: 8%;
  /* width: 100%; */
  overflow: scroll;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  padding-left: 1%;
  padding-right: 1%;
  background-color: black;
}

.App .bottomBar .resultBar .subsList .subsItem {
  height: 60%;
  min-width: 150px;
  max-lines: 1;
  /* background-color: rgb(0, 160, 198); */
  border-radius: 100px;
  color: white;
  font-weight: bold;
  font-size: smaller;
  display: flex;
  align-items: center;
  padding-left: 2%;
  padding-right: 2%;
  margin-left: 0.5%;
  margin-right: 0.5%;
  overflow-y: hidden;
  overflow-x: scroll;
  display: flex;
  justify-content: space-between;
}

.App .bottomBar .resultBar .resultEditor {
  width: 100%;
  height: 85%;
  padding: 0.5%;
}

.App .bottomBar .resultBar .subsList .subsItem button {
  color: white;
  background-color: transparent;
  border: none;
  font-weight: bold;
  z-index: 10;
}

.App .bottomBar .resultBar .subsList .warning {
  color: gray;
  font-size: smaller;
  font-weight: bold;
}


.App .bottomBar .resultBar .resTitleBar input {
  height: 70%;
  width: 80%;
  outline: none;
  border-radius: 100px;
  color: black;
  overflow: scroll;
  border :0ch;
  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  background-color: rgb(198, 198, 198);
  padding-left: 5%;
}

.App .bottomBar .resultBar .resTitleBar button {
  margin-left: 2%;
  height: 36px;
  width: 36px;
  background-color: rgb(0, 160, 198);
  border: none;
  border-radius: 18px;
}

.App .bottomBar .resultBar .resultName {
  height: 5%;
  max-width: 60%;
  min-width: 32%;
  max-lines: 0;
  z-index: 5;
  padding: 5px;
  top: -5%;
  position: relative;
  background-color: rgb(0, 160, 198);
  color: white;
  align-self: flex-end;
  border-radius: 12px 0 12px 0;
  font-size: small;
  font-weight: bold;
  display: flex;
  letter-spacing: 1px;
  justify-content:space-evenly;
  align-items: center;
  padding-left: 10px;
  overflow: hidden;
  
}
.App .bottomBar .resultBar p {
  white-space: nowrap;
  overflow-x: scroll;
  -ms-overflow-style: none;  /* Internet Explorer 10+ */
  scrollbar-width: none;  
  
}

.App .bottomBar .resultBar p::-webkit-scrollbar { 
  display: none;  /* Safari and Chrome */
}

.App .bottomBar .resultBar .resultName .resultCounter {
  height: 50%;
  width: 6%;
  padding: 2px;
  background-color: black;
  border-radius: 10px;
  font-size: smaller;
  display: flex;
  justify-content: center;
  margin-left: 10px;
  margin-right: 10px;
}

.App .upperBar .cd .connectionButton {
  
  height: 90%;
  border-radius: 100px;
  width: 50%;
  margin-right: 1%;
  border: none;
  background-color: rgb(0, 160, 198);
  color: white;
  font-weight: bold;

}

.App .bottomBar .subscriptionBar .subsTitleBar {
  background-color: black;
  height: 8%;
  width: 100%;
  color: white;
  margin-top: 0%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-left: 1%;
  padding-right: 1%;
  font-weight: bold;
}

.App .bottomBar .subscriptionBar .subsEditor{
  /* height: max-content; */
  width: 100%;
  min-width: 100%;
  max-width: 100%;
  height: 36%;
  padding: 0.5%;
  overflow-y: scroll;
}

.App .bottomBar .subscriptionBar .senderBar {
  height: 5%;
  width: 98%;
  display: flex;
  /* padding-left: 2%;
  padding-right: 2%; */
  align-items: flex-end;
  justify-content: space-between;
}

.App .bottomBar .subscriptionBar .senderBar .channelInputBar {
  height: 90%;
  width: 75%;
  outline: none;
  border-radius: 100px;
  color: black;
  overflow: scroll;
  border :0ch;
  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  background-color: rgb(198, 198, 198);
  padding-left: 2%;
}

.App .bottomBar .subscriptionBar .senderBar .channelSendButton {
  height: 105%;
  width: 21.5%;
  border: none;
  color: white;
  border-radius: 100px;
  background-color:  rgb(0, 160, 198);
  font-weight: bold;
}

.App .bottomBar .subscriptionBar .subsEditor .seditor {
  height: 100%;
  min-width: 100%;
  background-color: rgb(30, 28, 28);
  /* border-radius: 20px; */
  outline: 0;
  font-size: small;
  border: none;
  cursor: white;
  caret-color: white;
  color: white;
  resize: none;
  counter-reset: line;
  overflow-y: scroll;
  /* color: white; */
}

.App .bottomBar .subscriptionBar .subsEditor .seditor #codeArea {
  outline: none;
  padding-left: 60px;
  overflow: scroll;
}

.App .bottomBar .subscriptionBar .subsEditor .seditor pre {
  /* padding-left: 60px; */
  left: 0px;
}

.App .bottomBar .subscriptionBar .subsEditor .seditor .editorLineNumber {
  position: absolute;
  color: #cccccc;
  text-align: left;
  left: 10px;
}

textarea:focus, input:focus{
  outline: 0;
}

*:focus {
  outline: 0;
}

.App .bottomBar .subscriptionBar .subsEditor .seditor .token.comment,
.App .bottomBar .subscriptionBar .subsEditor .seditor .token.prolog,
.App .bottomBar .subscriptionBar .subsEditor .seditor .token.doctype,
.App .bottomBar .subscriptionBar .subsEditor .seditor .token.cdata {
  color: #90a4ae;
}
.App .bottomBar .subscriptionBar .subsEditor .seditor .token.punctuation {
  color: #9e9e9e;
}
.App .bottomBar .subscriptionBar .subsEditor .seditor .namespace {
  opacity: 0.7;
}
.App .bottomBar .subscriptionBar .subsEditor .seditor .token.property,
.App .bottomBar .subscriptionBar .subsEditor .seditor .token.tag,
.App .bottomBar .subscriptionBar .subsEditor .seditor .token.boolean,
.App .bottomBar .subscriptionBar .subsEditor .seditor .token.number,
.App .bottomBar .subscriptionBar .subsEditor .seditor .token.constant,
.App .bottomBar .subscriptionBar .subsEditor .seditor .token.symbol,
.App .bottomBar .subscriptionBar .subsEditor .seditor .token.deleted {
  color: rgb(147, 205, 236);
}
.App .bottomBar .subscriptionBar .subsEditor .seditor .token.selector,
.App .bottomBar .subscriptionBar .subsEditor .seditor .token.attr-name,
.App .bottomBar .subscriptionBar .subsEditor .seditor .token.string,
.App .bottomBar .subscriptionBar .subsEditor .seditor .token.char,
.App .bottomBar .subscriptionBar .subsEditor .seditor .token.builtin,
.App .bottomBar .subscriptionBar .subsEditor .seditor .token.inserted {
  color: rgb(176, 114, 74);
}

.App .bottomBar .subscriptionBar .subsEditor .seditor .token.operator,
.App .bottomBar .subscriptionBar .subsEditor .seditor .token.entity,
.App .bottomBar .subscriptionBar .subsEditor .seditor .token.url,
.App .bottomBar .subscriptionBar .subsEditor .seditor .language-css .token.string,
.App .bottomBar .subscriptionBar .subsEditor .seditor .style .token.string {
  color: rgb(159, 105, 70);
}

.App .bottomBar .subscriptionBar .subsEditor .seditor .token.atrule,
.App .bottomBar .subscriptionBar .subsEditor .seditor .token.attr-value,
.App .bottomBar .subscriptionBar .subsEditor .seditor .token.keyword {
  color: #3f51b5;
}
.App .bottomBar .subscriptionBar .subsEditor .seditor .token.function {
  color: #f44336;
}.App .bottomBar .subscriptionBar .subsEditor .seditor 
.App .bottomBar .subscriptionBar .subsEditor .seditor .token.regex,
.App .bottomBar .subscriptionBar .subsEditor .seditor .token.important,
.App .bottomBar .subscriptionBar .subsEditor .seditor .token.variable {
  color: rgb(159, 105, 70);
}
.App .bottomBar .subscriptionBar .subsEditor .seditor .token.important,
.App .bottomBar .subscriptionBar .subsEditor .seditor .token.bold {
  font-weight: bold;
}
.App .bottomBar .subscriptionBar .subsEditor .seditor .token.italic {
  font-style: italic;
}
.App .bottomBar .subscriptionBar .subsEditor .seditor .token.entity {
  cursor: help;
}


.App .bottomBar { 
  margin-top: 1%;
  margin-bottom: 0%;
  height: 83%;
  width: 100%;
  display: flex;
  flex-direction: row;
}

.App .bottomTitle {
  color: gray;
  font-size: small;
  font-style: italic;
  align-self: center;
}

.logo {
  height: 90%;
  width: 70px;
  padding-left: 1.2%;
}

